# KAIN2

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.MD  Generate Project Files UWP.bat  Makefile  README.MD  appveyor.yml
KAIN2/: CMakeLists.txt  KAIN2.H  THISDUST.H  kain2.vcxproj
KAIN2/Editor/: CMakeLists.txt  EDITOR.H  Engine_Version.h  KAIN2.res  Main.cpp
KAIN2/Editor/Platform/: Linux.cmake  NX_Arm.cmake  Windows.cmake
KAIN2/Editor/UserInterface/: Editor_UI.cpp  Editor_UI.h  Editor_UI_Font.h  Editor_UI_Icons.h  Editor_Window.cpp  Editor_Window.h  ShiftBottomPane.cpp  ShiftBottomPane.h  ShiftCenterPane.cpp  ShiftCenterPane.h  ShiftD3D11Frame.cpp  ShiftD3D11Frame.h  ShiftD3D11Window.cpp  ShiftD3D11Window.h  ShiftD3D9Frame.cpp  ShiftD3D9Frame.h  ShiftEmptyPane.cpp  ShiftLabel.cpp  ShiftLabel.h  ShiftLeftPane.cpp  ShiftLeftPane.h  ShiftMenuBar.cpp  ShiftOGLFrame.cpp  ShiftOGLFrame.h  ShiftRenderablePropertiesPane.cpp  ShiftResources.qrc  ShiftRightPane.cpp  ShiftRightPane.h  ShiftToolBar.cpp  ShiftToolBar.h  ShiftToolBox.cpp  ShiftToolBox.h  ShiftToolButton.cpp  ShiftToolButton.h  ShiftToolMenuButton.cpp  ShiftUnitPropertiesPane.cpp  ShiftUnitPropertiesPane.h  ShiftWindow.cpp  ShiftWindow.h
KAIN2/Game/: BSP.C  BSP.H  CAMERA.C  CAMERA.H  CMakeLists.txt  COLLIDE.C  COLLIDE.H  CORE.H  DEBUG.C  DEBUG.H  DRAW.C  DRAW.H  EDITOR.C  EVENT.C  EVENT.H  FONT.C  FONT.H  FX.C  FX.H  G2TYPES.H  GAMELOOP.C  GAMELOOP.H  GAMEPAD.C  GAMEPAD.H  GENERIC.C  GENERIC.H  GEX2.H  GLYPH.C  GLYPH.H  INLINE_C_EXT.H  INSTANCE.C  INSTANCE.H  KAIN2.RC  LIGHT3D.C  LIGHT3D.H  LIST.C  LOAD3D.C  LOAD3D.H  MATH3D.C  MATH3D.H  (+48 more)
KAIN2/Game/CINEMA/: CINEPSX.C
KAIN2/Game/G2/: ANIMG2.C  ANIMG2.H  ANMCTRLR.C  ANMCTRLR.H  ANMDECMP.C  ANMDECMP.H  ANMG2ILF.C  ANMG2ILF.H  ANMINTRP.C  ANMINTRP.H  INSTNCG2.C  MAING2.C  MAING2.H  POOLMMG2.C  POOLMMG2.H  QUATG2.C  QUATG2.H  TIMERG2.C
KAIN2/Game/LOCAL/: LOCALSTR.C  LOCALSTR.H
KAIN2/Game/MCARD/: MCASSERT.C  MEMCARD.C  MEMCARD.H
KAIN2/Game/MENU/: MENU.C  MENU.H  MENUDEFS.C  MENUDEFS.H  MENUFACE.C  MENUFACE.H  MENUUTIL.C  MENUUTIL.H
KAIN2/Game/MONSTER/: ALUKA.C  ALUKA.H  HUMAN.C  HUMAN.H  HUNTER.C  HUNTER.H  MBMISS.C  MBMISS.H  MISSILE.C  MISSILE.H  MONAPI.C  MONLIB.C  MONLIB.H  MONMSG.C  MONMSG.H  MONSENSE.C  MONSENSE.H  MONSTER.C  MONSTER.H  MONTABLE.C  MONTABLE.H  MORLOCK.H  PRIESTESS.C  RONINBSS.C  SLUAGH.C  SLUAGH.H  SOUL.C  SOUL.H  VWRAITH.C  VWRAITH.H  WALBOSS.C  WORSHIP.C  WORSHIP.H
KAIN2/Game/OVERLAYS/: CINEMAX.C  CINEMAX.H  MCARDX.C  MCARDX.H
KAIN2/Game/PC/: LIBPAD.H  libspu.c  libspu.h  pcload.c  snd.h  sndmix.c  transform.cpp
KAIN2/Game/PLAN/: ENMYPLAN.C  ENMYPLAN.H  PLAN.C  PLAN.H  PLANAPI.C  PLANAPI.H  PLANCOLL.C  PLANCOLL.H  PLANPOOL.C  PLANPOOL.H  PLANSRCH.C  PLANSRCH.H
KAIN2/Game/PSX/: AADLIB.C  AADLIB.H  AADSEQEV.C  AADSEQEV.H  AADSFX.C  AADSQCMD.C  AADSQCMD.H  AADVOICE.C  AADVOICE.H  COLLIDES.C  COLLIDES.H  DRAWS.C  DRAWS.H  MAIN.C  MAIN.H  SNMAIN.H  SNMAIN.S  SUPPORT.C  SUPPORT.H
KAIN2/Game/Platform/: Apple.cmake  Emscripten.cmake  Linux.cmake  PSP2.cmake  Win32.cmake  Win64.cmake  Windows.cmake  WindowsStore.cmake
KAIN2/Game/RAZIEL/: ALGOCTRL.C  ALGOCTRL.H  ATTACK.C  ATTACK.H  CONTROL.C  CONTROL.H  HEALTH.C  HEALTH.H  PUPPET.C  PUPPET.H  RAZDBUG.C  RAZDBUG.H  RAZIEL.C  RAZIEL.H  RAZLIB.C  RAZLIB.H  SENSES.C  SENSES.H  SPIDER.C  SPIDER.H  STEERING.C  SWIM.C  SWIM.H
KAIN2/Platform/: Durango.cmake  Emscripten.cmake  NX.cmake  NX_Arm.cmake  NX_Win.cmake  PSP2.cmake  Windows.cmake  WindowsStore.cmake
KAIN2/Tools/: CMakeLists.txt
KAIN2/Tools/LST/: CMakeLists.txt
KAIN2/Tools/MIDI/: MIDI.C
KAIN2/Tools/ShiftEditor/: CMakeLists.txt  EDITOR.C  EDITOR.RC  Editor_Version.h  Editor_Version.h.in
KAIN2/Tools/ShiftGlyph/: CMakeLists.txt  FILE.C  FILE.CPP  FILE.H  GLYPH.H  LOCALS.H  MAIN.C  META.H  MONSTER.H  OBJECT.H  PLAYER.H  RAZIEL.H  SOUND.H  UPGRADE.C  UPGRADE.CPP  UPGRADE.H
KAIN2/Tools/ShiftList/: BIGFILE.H  CMakeLists.txt  FILELIST.H
KAIN2/Tools/ShiftMidi/: CMakeLists.txt  MIDI.C  MIDI.H
kain2/: CMakeLists.txt  KAIN2.H  THISDUST.C  THISDUST.H  gex2.h  kain2.sln  kain2.vcxproj  kain2.vcxproj.filters  psyq.h
kain2/Platform/: Emscripten.cmake  Windows.cmake  WindowsStore.cmake
kain2/src/: BSP.C  BSP.H  CAMERA.C  CAMERA.H  COLLIDE.C  COLLIDE.H  CORE.H  DEBUG.C  DEBUG.H  DRAW.C  DRAW.H  EVENT.C  EVENT.H  FONT.C  FONT.H  FX.C  FX.H  GAMELOOP.C  GAMELOOP.H  GAMEPAD.C  GAMEPAD.H  GENERIC.C  GENERIC.H  GLYPH.C  GLYPH.H  INSTANCE.C  INSTANCE.H  LIGHT3D.C  LIGHT3D.H  LIST.C  LIST.H  LOAD3D.C  LOAD3D.H  MATH3D.C  MATH3D.H  MEMPACK.C  MEMPACK.H  OBTABLE.C  OBTABLE.H  PHYSICS.C  (+43 more)
kain2/src/CINEMA/: CINEPSX.C  CINEPSX.H
kain2/src/G2/: ANIMG2.C  ANIMG2.H  ANMCTRLR.C  ANMCTRLR.H  ANMDECMP.C  ANMDECMP.H  ANMG2ILF.C  ANMG2ILF.H  ANMINTRP.C  ANMINTRP.H  INSTNCG2.C  INSTNCG2.H  MAING2.C  MAING2.H  POOLMMG2.C  POOLMMG2.H  QUATG2.C  QUATG2.H  TIMERG2.C  TIMERG2.H
kain2/src/LOCAL/: LOCALSTR.C  LOCALSTR.H
kain2/src/MCARD/: MCASSERT.C  MCASSERT.H  MEMCARD.C  MEMCARD.H
kain2/src/MENU/: MENU.C  MENU.H  MENUDEFS.C  MENUDEFS.H  MENUFACE.C  MENUFACE.H  MENUUTIL.C  MENUUTIL.H
kain2/src/MONSTER/: ALUKA.C  ALUKA.h  ALUKABSS.C  HUMAN.C  HUMAN.H  HUNTER.C  HUNTER.H  HUNTER.h  KAIN.C  MBMISS.C  MBMISS.H  MISSILE.C  MISSILE.H  MONAPI.C  MONAPI.H  MONLIB.C  MONLIB.H  MONMSG.C  MONSENSE.C  MONSENSE.H  MONSTER.C  MONSTER.H  MONTABLE.C  MONTABLE.H  MORLOCK.H  PRIESTESS.C  SKINNER.C  SLUAGH.C  SLUAGH.H  SOUL.C  SOUL.H  VWRAITH.C  VWRAITH.H  WALBOSB.C  WORSHIP.C  WORSHIP.H
kain2/src/OVERLAYS/: CINEMAX.C  CINEMAX.H  MCARDX.C  MCARDX.H
kain2/src/PC/: KERNEL.H  LIBAPI.H  LIBGPU.H  LIBGTE.H  LIBSN.H  ViewVM.cpp  async.c  async.cpp  async.h  libapi.c  libetc.c  libgpu.c  libgte.c  libsn.c  libspu.h  memwpsx.c  pcload.c  setup.cpp  snd.cpp  snd.h  sndmix.c  sndmix.h
kain2/src/PLAN/: ENMYPLAN.C  ENMYPLAN.H  PLAN.C  PLAN.H  PLANAPI.C  PLANAPI.H  PLANCOLL.C  PLANCOLL.H  PLANPOOL.C  PLANPOOL.H  PLANSRCH.C  PLANSRCH.H
kain2/src/PSX/: AADLIB.C  AADLIB.H  AADSEQEV.C  AADSEQEV.H  AADSFX.C  AADSQCMD.C  AADVOICE.C  COLLIDES.H  DRAWS.C  DRAWS.H  DRAWS.S  MAIN.C  (+3 more)
(+317 files in other folders)
