cmake_minimum_required (VERSION 3.0)

project (KAIN2_${TARGET_ARCH})

#Enable 32-bit address for tag
OPTIONAL_DEFINE(USE_32_BIT_ADDR "Enable/Disable 32-bit address for tag" ON)

#file(GLOB_RECURSE KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.c ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.cur ${CMAKE_CURRENT_SOURCE_DIR}/*.rc)
#list(FILTER KAIN2_SRCS EXCLUDE REGEX "/PC/*")

list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/PSX/PSX_G2/MAINVM.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/PSX/MAIN.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/MEMPACK.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/PSX/AADLIB.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/PSX/AADSFX.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/VRAM.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/LOAD3D.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/VOICEXA.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/LOCAL/LOCALSTR.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/G2/MAING2.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/CINEMA/CINEPSX.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/STRMLOAD.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/STREAM.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/GAMELOOP.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/SOUND.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/SAVEINFO.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/FONT.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/GAMEPAD.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/DEBUG.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/TIMER.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/RESOLVE.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/EVENT.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/INSTANCE.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/OBTABLE.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/RELMOD.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/RAZIEL/RAZLIB.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/MENU/MENUFACE.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/MENU/MENU.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/MENU/MENUDEFS.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/DRAW.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/PSX/DRAWS.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/MENU/MENUUTIL.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/MCARD/MEMCARD.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/OVERLAYS/MCARDX.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/CAMERA.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/PLAN/ENMYPLAN.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/PLAN/PLANAPI.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/G2/ANIMG2.C)
list(APPEND KAIN2_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/src/G2/POOLMMG2.C)

add_executable(
${PROJECT_NAME}
WIN32
${KAIN2_SRCS}
)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${KAIN2_SRCS})

set_target_properties(
${PROJECT_NAME} PROPERTIES OUTPUT_NAME "KAIN2"
${PROJECT_NAME} PROPERTIES FOLDER "Build Targets/PlayStation"
)

set(TARGET_BINARY_DIR "${PROJECT_BINARY_DIR}/${CMAKE_CFG_INTDIR}")

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src/)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${ROOT_DIR}/Emulator)

if(NOT ${CMAKE_BUILD_TYPE})
target_link_directories(${PROJECT_NAME} PUBLIC ${ROOT_DIR}/Build/Emulator/Release/)
else()
target_link_directories(${PROJECT_NAME} PUBLIC ${ROOT_DIR}/Build/Emulator/Debug/)
endif()

#Include all platform specific cmake files.
include("Platform/Windows.cmake")
include("Platform/Mingw.cmake")
include("Platform/Linux.cmake")
include("Platform/Emscripten.cmake")
include("Platform/Android.cmake")

BuildPreProcessorDefinitions()

target_link_libraries(
${PROJECT_NAME}
${PSX_LIB}
${SDL2_LIBRARY}
${OPENGL_gl_LIBRARY}
${GLEW_LIBRARY}
)

if(MSVC)
	set_target_properties(
	${PROJECT_NAME}
	PROPERTIES LINK_FLAGS_DEBUG "/SUBSYSTEM:CONSOLE"
	PROPERTIES LINK_FLAGS_RELWITHDEBINFO "/SUBSYSTEM:CONSOLE"
	PROPERTIES LINK_FLAGS_RELEASE "/SUBSYSTEM:CONSOLE"
	PROPERTIES LINK_FLAGS_MINSIZEREL "/SUBSYSTEM:CONSOLE"
	PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY ${TARGET_BINARY_DIR}
	)
endif()

add_definitions(-DPSXPC_VERSION)
add_definitions(-DPSX_VERSION)